# myTk

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  controlpanel_app.py  example.py  filters_app.py  filtersdb.py  gridviewer.py  lensviewer_app.py  microscope_app.py  mydata.sublime-workspace  mytk.py  pydatagraph_app.py  pyproject.toml  requirements.txt  setup.py  speckleapp.py  testBaseWidgets.py  testBindings.py  testButton.py  testCheckbox.py  testDialogs.py  testModulesManager.py  testMyApp.py  test_app.py  test_mytk.py  testapp.py  tklab.py
.claude/skills/mytk/: SKILL.md
.github/workflows/: release.yml  tests.yml
apps/: canvas_app.py  controlpanel_app.py  envapp.py  example.py  file_calculator_app.py  fileviewer_app.py  filters_app.py  lensviewer_app.py  microscope_app.py  pydatagraph_app.py  tklab.py
apps/filters_data/: AF01-504_24_measured.txt
apps/processed-tpop_filters_data/: Processed-#14-Blue-interference.csv  Processed-#33-Jaune.csv  Processed-#7-632-∆10.csv
apps/tpop_filters_data/: 1804-ascii.txt  1809-ascii.txt  4788-ascii.txt  56-ascii.txt  FBP01-580_14.txt  FF01-357_44_Spectrum.txt  FF01-417_60_Spectrum.txt  FF01-446_523_600_677_Spectrum.TXT  FF01-514_30_Spectrum.txt  FF01-640_14_Spectrum.txt  FF01-650_60_Spectrum.txt  FF01-650_SP_Spectrum.txt  FF01-655_40_Spectrum.txt  FF01-680_SP_Spectrum.txt  FF01-750_SP_Spectrum.txt  FF02-475_50_Spectrum.TXT  FF02-655_40_Spectrum.txt  LP02-1064RE_measured.txt
docs/source/: autoapi.rst  conf.py  design.rst  examples.rst  index.rst  modules.rst  mytk.example_apps.rst  mytk.rst
docs/source/api/: core.rst  data.rst  utilities.rst  visualization.rst  widgets.rst
filter_data/: FF01-578_21_Spectrum.txt  XF3017R_T.csv  filters.json
filters_data/: 260-ascii.txt  FF02-641_75_Spectrum.txt  README-adding new filters.md  filters-save.json  filters.json  •README-adding new filters.md
mytk/: __init__.py  __main__.py  app.py  base.py  bindable.py  button.py  canvasview.py  checkbox.py  clitools.py  configurable.py  controls.py  dataviews.py  dialog.py  dnd.py  draganddropcapable.py  entries.py  eventcapable.py  figures.py  fileviewer.py  images.py  indicators.py  jsoncanvas.py  labels.py  modulesmanager.py  mytk.py  notificationcenter.py  popupmenu.py  progressbar.py  radiobutton.py  remote.py  remotecli.py  remotecontrollable.py  svgcanvas.py  tableview.py  tabulardata.py  utils.py  vectors.py  videoview.py  view3d.py  view3d_pyrender.py  (+2 more)
mytk/example_apps/: .eps  canvas_app.py  contrast_app.py  controlpanel_app.py  dnd_app.py  example.py  file_calculator_app.py  fileviewer_app.py  filters_app.py  formatted_entry_app.py  jsoncanvas_app.py  lensviewer_app.py  microscope_app.py  powermeter_app.py  progressbar_app.py  pydatagraph_app.py  questionsdb_app.py  svgcanvas_app.py  svgviewer_app.py  test-excel.xlsx  view3d_app.py
mytk/example_apps/processed-tpop_filters_data/: Processed-#10-632-∆10.csv  Processed-#12-Oriel-56470-577-∆10.csv  Processed-#13-inconnu.csv  Processed-#18-810.csv  Processed-#20-Miroir inconnu.csv  Processed-#21-482-∆28.csv  Processed-#22-BP520-∆28.csv  Processed-#26-Dichroic-650.csv  Processed-#28-IR750-cutoff.csv  Processed-#30-Rouge-BP.csv  Processed-#31-650cuton.csv  Processed-#34-Bleu.csv  Processed-#39-Inconnu.csv  Processed-#41-46833.csv  Processed-#42-Inocnnu.csv  Processed-#46.csv  filters.json
mytk/example_apps/tpop_filters_data/: 176-ascii.txt  1801-ascii.txt  196-ascii.txt  2720-ascii.txt  5067-ascii.txt  5741-ascii.txt  70-ascii.txt  FF01-586_20_Spectrum.txt  FF01-589_18_Spectrum.txt  FF01-593_46_Spectrum.txt  FF01-710_40_Spectrum.txt  FF01-716_43_Spectrum.txt  FF01-832_37_Spectrum.TXT  FF596-Di01_Spectrum.txt  LL01-785_Spectrum.txt  LP02-1064RU_Spectrum.txt  LP02-633RE_Spectrum.txt  LP02-980RE_Measured.txt  filters.json
mytk/lab/: tklab.py
mytk/tests/: .coveragerc  energy_translucent.glb  envtest.py  example.xlsx  testBackgroundColor.py  testBaseWidgets.py  testBindings.py  testBox.py  testButton.py  testCanvasView.py  testCheckbox.py  testCliTools.py  testConfigurable.py  testCustomDialogs.py  testDialogs.py  testDragAndDrop.py  testEntries.py  testGridFill.py  testImages.py  testJSONCanvas.py  testLabel.py  testModulesManager.py  testMyApp.py  testNotificationCenter.py  testPopupMenu.py  testProgressBar.py  testRadioButtons.py  testRemote.py  testRemoteCLI.py  testRemoteDiscovery.py  testSVGCanvas.py  testSVGImage.py  testSkill.py  testSlider.py  testStyles.py  testTableView.py  testTabularData.py  testTreeData.py  testTreeTableView.py  testURLLabel.py  (+7 more)
mytk/uvc/: a.out  libuvc.0.dylib  uvc.py  webcam.py
scripts/: class_diagram.py  example_screenshots.py  gen_examples_doc.py  screenshot.py
tpop_filters_data/: Processed-#1-IF@650-80.csv  Processed-#11-Edmund-43129-589.csv  Processed-#15-inconnu.csv  Processed-#16-IR-cutoff.csv  Processed-#17-Inconnu.csv  Processed-#19-Dichroic-650.csv  Processed-#2-IF@532∆10.csv  Processed-#23-Edmund-46158.csv  Processed-#24-EO-43128.csv  Processed-#25-F495-Di03.csv  Processed-#27-BP650-Semrock-confocal.csv  Processed-#29-jaune.csv  Processed-#3-591-Oriel-53915.csv  Processed-#32-OG515 Jaune.csv  Processed-#35-FBH650 ∆10.csv  Processed-#37-06804-3-00.csv  Processed-#38-46832.csv  Processed-#4-450-∆10.csv  Processed-#40-46833.csv  Processed-#43-inconnu.csv  Processed-#44.csv  Processed-#45-inconnu.csv  Processed-#47.csv  Processed-#48.csv  Processed-#49.csv  Processed-#5-Filtre-vert.csv  Processed-#6-632-∆10.csv  Processed-#8-IR-cutoff-700.csv  Processed-#9-632-∆10.csv
uvc/: pyuvc.py  usbcam.py  uvc.c  webcam_app.py
