
[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mytk"
version="0.10.9"
description = "A wrapper for Tkinter for busy scientists"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dynamic = ["dependencies"]
authors = [
  {name = "Daniel Côté", email = "dccote@cervo.ulaval.ca"}
]
maintainers = [
  {name = "Daniel Côté", email = "dccote@cervo.ulaval.ca"}
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/DCC-Lab/myTk"
Repository = "https://github.com/DCC-Lab/myTk"
"Bug Tracker" = "https://github.com/DCC-Lab/myTk/issues"


[project.optional-dependencies]
video = ["opencv-python"]
optics = ["raytracing"]
docs = ["furo", "sphinx"]
all = ["mytk[video,optics]"]

[tool.setuptools.package-data]
"mytk.resources" = ["*.png"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["mytk/tests"]
