
[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mytk"
version="1.0.1"
description = "A wrapper for Tkinter for busy scientists"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dynamic = ["dependencies"]
authors = [
  {name = "Daniel Côté", email = "dccote@cervo.ulaval.ca"}
]
maintainers = [
  {name = "Daniel Côté", email = "dccote@cervo.ulaval.ca"}
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/DCC-Lab/myTk"
Repository = "https://github.com/DCC-Lab/myTk"
"Bug Tracker" = "https://github.com/DCC-Lab/myTk/issues"


[project.optional-dependencies]
video = ["opencv-python"]
optics = ["raytracing"]
docs = ["furo", "sphinx", "myst-parser"]
all = ["mytk[video,optics]"]

[tool.setuptools.package-data]
"mytk.resources" = ["*.png"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "B", "SIM", "N"]
ignore = [
    "E501",
    "D100",   # module docstrings — added manually for key modules
    "D104",   # package docstrings
    "D105",   # magic method docstrings
    "D107",   # __init__ docstrings — often redundant with class docstring
    "D203",   # conflicts with D211 (no blank line before class docstring)
    "D213",   # conflicts with D212 (summary on first line)
    "N812",   # lowercase imported as non-lowercase — common with tkinter
    "N803",   # argument name should be lowercase — some are physics/math conventions
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"mytk/tests/*" = ["D", "F403", "F405", "F841", "F811", "N802", "N806", "N818", "B007", "B017", "B018", "E722"]
"mytk/example_apps/*" = ["D", "F403", "F405", "F841", "N806", "B007", "SIM", "E721", "E722", "W291"]
"mytk/lab/*" = ["D", "F403", "F405", "B905"]
"mytk/__main__.py" = ["N802", "N806"]

[tool.pytest.ini_options]
testpaths = ["mytk/tests"]
