
[build-system]
requires = ["setuptools>=70", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "mytk"
dynamic = ["version", "dependencies"]
description = "A wrapper for Tkinter for busy scientists"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
  {name = "Daniel Côté", email = "dccote@cervo.ulaval.ca"}
]
maintainers = [
  {name = "Daniel Côté", email = "dccote@cervo.ulaval.ca"}
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/DCC-Lab/myTk"
Repository = "https://github.com/DCC-Lab/myTk"
"Bug Tracker" = "https://github.com/DCC-Lab/myTk/issues"


[project.optional-dependencies]
# Per-feature extras — install only what you use. Each feature also pulls its
# dependency in on demand at first use (via ModulesManager); these extras are a
# convenience for provisioning ahead of time.
figures = ["matplotlib>=3.9", "numpy"]   # Figure, XYPlot, Histogram
images = ["Pillow"]                        # Image, ImageWithGrid
tables = ["pandas", "openpyxl"]            # TableView.load_tabular_data (CSV/Excel)
clipboard = ["pyperclip"]                  # copy-to-clipboard helpers
web = ["requests"]                         # loading images/data from a URL
video = ["opencv-python"]                  # VideoView
view3d = ["trimesh", "numpy", "Pillow", "moderngl"]  # View3D (moderngl backend)
dnd = ["tkinterdnd2"]                       # drag-and-drop (see mytk.dnd re: Tcl)
optics = ["raytracing"]
docs = ["furo", "sphinx", "myst-parser"]
# Everything installable from PyPI on any machine:
all = ["mytk[figures,images,tables,clipboard,web,video,view3d,dnd]"]
# What the headless test suite needs to exercise the non-GPU widgets:
test = ["matplotlib>=3.9", "numpy", "pandas", "openpyxl", "pyperclip", "requests"]

[tool.setuptools_scm]
write_to = "mytk/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["mytk*"]
exclude = [
    "mytk.example_apps.tpop_filters_data",
    "mytk.example_apps.processed-tpop_filters_data",
]

[tool.setuptools.package-data]
"mytk.resources" = ["*.png"]
"mytk.example_apps" = ["logo.png"]

[tool.setuptools.exclude-package-data]
"mytk.example_apps" = [
    "tpop_filters_data/**",
    "processed-tpop_filters_data/**",
    "*.zip",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "B", "SIM", "N"]
ignore = [
    "E501",
    "D100",   # module docstrings — added manually for key modules
    "D104",   # package docstrings
    "D105",   # magic method docstrings
    "D107",   # __init__ docstrings — often redundant with class docstring
    "D203",   # conflicts with D211 (no blank line before class docstring)
    "D213",   # conflicts with D212 (summary on first line)
    "N812",   # lowercase imported as non-lowercase — common with tkinter
    "N803",   # argument name should be lowercase — some are physics/math conventions
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"mytk/tests/*" = ["D", "F403", "F405", "F841", "F811", "N802", "N806", "N818", "B007", "B017", "B018", "E722"]
"mytk/example_apps/*" = ["D", "F403", "F405", "F841", "N806", "B007", "SIM", "E721", "E722", "W291"]
"mytk/lab/*" = ["D", "F403", "F405", "B905"]
"mytk/__main__.py" = ["N802", "N806"]

[tool.pytest.ini_options]
testpaths = ["mytk/tests"]
